--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Task14/td>
+            <td>Task14</td>
             <td></td>
         </tr>
         <tr>
