--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
     <title>Index</title>
 </head>
 <body>
-    <table>
+    <table border="1" align="center">
+        <tr>
+        <th>TaskNumber</th>
+        <th>Link</th>
+        </tr>
         <tr>
             <td>Task1</td>
-            <td></td>
+            <td><a href="./html_task1.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task2</td>
-            <td></td>
+            <td><a href="./html_task2.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task3</td>
-            <td></td>
+            <td><a href="./html_task3.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task4</td>
-            <td></td>
+            <td><a href="./html_task4.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task5</td>
-            <td></td>
+            <td><a href="./html_task5.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task6</td>
@@ -76,7 +80,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Task8</td>
+            <td>Task18</td>
             <td></td>
         </tr>
 
