--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
         </tr>
         <tr>
             <td>Task6</td>
-            <td></td>
+            <td><a href="./css_task1.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task7</td>
-            <td></td>
+            <td><a href="./css_task2.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task8</td>
-            <td></td>
+            <td><a href="./css_task3.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task9</td>
-            <td></td>
+            <td><a href="./css_task4.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task10</td>
-            <td></td>
+            <td><a href="./css_task5.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task11</td>
-            <td></td>
+            <td><a href="./css_task6.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task12</td>
-            <td></td>
+            <td><a href="./css_task7.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task13</td>
