--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <table border="1" align="center">
@@ -13,51 +16,51 @@
         </tr>
         <tr>
             <td>Task1</td>
-            <td><a href="./html_task1.html">LINK</a></td>
+            <td><a target="_blank"href="./html_task1.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task2</td>
-            <td><a href="./html_task2.html">LINK</a></td>
+            <td><a target="_blank"href="./html_task2.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task3</td>
-            <td><a href="./html_task3.html">LINK</a></td>
+            <td><a target="_blank"href="./html_task3.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task4</td>
-            <td><a href="./html_task4.html">LINK</a></td>
+            <td><a target="_blank"href="./html_task4.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task5</td>
-            <td><a href="./html_task5.html">LINK</a></td>
+            <td><a target="_blank"href="./html_task5.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task6</td>
-            <td><a href="./css_task1.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task1.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task7</td>
-            <td><a href="./css_task2.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task2.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task8</td>
-            <td><a href="./css_task3.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task3.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task9</td>
-            <td><a href="./css_task4.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task4.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task10</td>
-            <td><a href="./css_task5.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task5.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task11</td>
-            <td><a href="./css_task6.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task6.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task12</td>
-            <td><a href="./css_task7.html">LINK</a></td>
+            <td><a target="_blank"href="./css_task7.html">LINK</a></td>
         </tr>
         <tr>
             <td>Task13</td>
