--- a/html_task1.html
+++ b/html_task1.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task1</title>
+    <style>
+        table
+        {
+            border:1px solid white;
+            background-color: rgb(138,207,206);
+            width: 700px;
+        }
+       
+        
+    </style>
 </head>
-<body>
-    <table border ="1" bordercolor="white" bgcolor="cyan" cellpadding = "2" cellspacing="3">
+    <table  cellspacing="5">
         <tr>
             <th>&emsp;&emsp;&emsp;FirstName&emsp;&emsp;&emsp;</th>
             <th>&emsp;&emsp;&emsp;LastName&emsp;&emsp;&emsp;</th>
