--- a/html_task2.html
+++ b/html_task2.html
@@ -6,7 +6,7 @@
     <title>Task2</title>
 </head>
 <body>
-    <table border ="1"  bordercolor = "black" , bgcolor ="white">
+    <table style="outline:1px solid;">
         <tr>
             <td>
                 <dl>
