--- a/html_task4.html
+++ b/html_task4.html
@@ -9,7 +9,7 @@
     <table cellspacing="10">
         <tr>
             <td>
-                <label for="fn">First Name:</label>
+                <label for="fn">Full Name:</label>
             </td>
             <td>
                 <input name='fn' type="text"/>
