--- a/css_task1.html
+++ b/css_task1.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<table align = "center" style="width: 50%; background-color: aquamarine; border-radius: 10px;" border="1">
+<table align = "center" style="width: 50%; background-color: rgb(139,207,206); border-radius: 10px;" border="1">
   <tr id="i">
     <th id="i">Firstname</th>
     <th id="i">Lastname</th> 
