--- a/css_task3.html
+++ b/css_task3.html
@@ -7,7 +7,7 @@
     <style>
         th {
             color:white;
-            background-color: hsl(120, 57%, 55%);
+            background-color: rgb(1,160,95);
         }
 
         .w
