--- a/css_task3.html
+++ b/css_task3.html
@@ -17,7 +17,7 @@
 
         .g
         {
-            background-color: hwb(0 90% 9%);
+            background-color: rgb(229,230,232;
         }
         table{
             width: 80%;
