--- a/css_task4.html
+++ b/css_task4.html
@@ -49,7 +49,7 @@
         }
         .green
         {
-            background-color: green;
+            background-color: rgb(0,169,95);
             width: 50px;
             height:60px;
             border-top-right-radius: 20%;
@@ -59,7 +59,7 @@
         }
         .red
         {
-            background-color: rgb(255, 51, 0);
+            background-color: rgb(243, 50, 38);
             width: 50px;
             height: 60px;
             border-top-right-radius: 20%;
@@ -69,7 +69,7 @@
         }
         .blue
         {
-            background-color: rgb(63, 224, 249);
+            background-color: rgb(17, 139, 242);
             width: 50px;
             height: 60px;
             border-top-right-radius: 20%;
