--- a/css_task5.html
+++ b/css_task5.html
@@ -12,7 +12,7 @@
             
         }
         nav{
-            background-color: #ffea00;
+            background-color: rgb(213,214,46);
             border: 1px solid grey;
             height: 500px;
             width: 600px;
