--- a/css_task5.html
+++ b/css_task5.html
@@ -71,8 +71,8 @@
         <p id="content">It lacks images, but at least it has style. And it has links, even if they don't go anywhere...</p>
         <p id="content">There should be more here, but I don't know what yet.</p>
         <p id="content">___________________________________</p>
-        <p id="content">Made 5 April 2004</p>
-        <p style="margin-left:220px">by myself.</p>
+        <p id="content"><i>Made 5 April 2004</p>
+        <p style="margin-left:220px">by myself.</i></p>
         <ul>
             <li><a href="#">Homepage</a></li>
             <li><a href="#">Musings</a></li>
