--- a/css_task7.html
+++ b/css_task7.html
@@ -12,7 +12,7 @@
         }
         nav
         {
-            background-color:hsl(335, 88%, 25%);
+            background-color:rgb(104,17,47);
             height:500px;
             width: 500px;
             margin-top: 100px;
@@ -28,7 +28,10 @@
         }
         form
         {
-            color:white;
+            
+            font-weight: 100;
+            font-style: normal;
+            color: rgb(224,192,202);
             padding-left: 100px;
             padding-top: 50px;
             padding-bottom: 20px;
@@ -50,6 +53,7 @@
             font-weight: 750;
             font-size: 20px;
         }
+        
     </style>
 </head>
 <body>
@@ -82,7 +86,7 @@
 
             <p style="padding-bottom: 20px;">
                 <label for="lang">language</label>
-                <select name="lang" style="position:absolute;width:auto; left:750px">
+                <select name="lang" style="position:absolute;width:auto; left:750px;height:25px">
                     <option value="-1">Select language</option>
                     <option value="english">English</option>
                     <option value="tamil">Tamil</option>
