--- a/index.html
+++ b/index.html
@@ -15,51 +15,51 @@
         <th>Link</th>
         </tr>
         <tr>
-            <td>Task1</td>
+            <td>HTML_Task1</td>
             <td><a target="_blank"href="./html_task1.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task2</td>
+            <td>HTML_Task2</td>
             <td><a target="_blank"href="./html_task2.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task3</td>
+            <td>HTML_Task3</td>
             <td><a target="_blank"href="./html_task3.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task4</td>
+            <td>HTML_Task4</td>
             <td><a target="_blank"href="./html_task4.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task5</td>
+            <td>HTML_Task5</td>
             <td><a target="_blank"href="./html_task5.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task6</td>
+            <td>CSS_Task1</td>
             <td><a target="_blank"href="./css_task1.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task7</td>
+            <td>CSS_Task2</td>
             <td><a target="_blank"href="./css_task2.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task8</td>
+            <td>CSS_Task3</td>
             <td><a target="_blank"href="./css_task3.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task9</td>
+            <td>CSS_Task4</td>
             <td><a target="_blank"href="./css_task4.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task10</td>
+            <td>CSS_Task5</td>
             <td><a target="_blank"href="./css_task5.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task11</td>
+            <td>CSS_Task6</td>
             <td><a target="_blank"href="./css_task6.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task12</td>
+            <td>CSS_Task7</td>
             <td><a target="_blank"href="./css_task7.html">LINK</a></td>
         </tr>
         <tr>
