--- a/css_task1.html
+++ b/css_task1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task1</title>
+    <title>CSS_Task1</title>
     <style>
         #i{
           border: 1px solid black;
