--- a/html_task3.html
+++ b/html_task3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task3</title>
+    <title>HTML_Task3</title>
 </head>
 <body>
     <table border="1" bordercolor="black" bgcolor="lightgray">
