--- a/html_task3.html
+++ b/html_task3.html
@@ -6,7 +6,7 @@
     <title>HTML_Task3</title>
 </head>
 <body>
-    <table border="1" bordercolor="black" bgcolor="lightgray">
+    <table border="1" bordercolor="black" bgcolor="lightgray" style="border-collapse:collapse;">
         <tr>
             <td><p>Click any of the following links</p>
             <p><a href="https://google.com" target="_blank">Opens in New</a> |
