--- a/html_task5.html
+++ b/html_task5.html
@@ -52,11 +52,11 @@
             <td id="c2"><input type="text" class="fill"></td>
         </tr>
         <tr>
-            <td id ="center">Passoword</td>
+            <td id ="center">Password</td>
             <td id="c2"><input type="password" class="fill"></td>
         </tr>
         <tr>
-            <td id ="center">Re-enter Passoword</td>
+            <td id ="center">Re-enter Password</td>
             <td id="c2"><input type="password" class="fill"></td>
         </tr>
         
