--- a/css_task2.html
+++ b/css_task2.html
@@ -83,6 +83,7 @@
 </head>
 
 <body>
+    <p align="center">Hover over links to see effect.</p>
     <nav class="vertical" >
         <ul class="vul">
             <li><a href="">Home</a></li>
