--- a/index.html
+++ b/index.html
@@ -63,27 +63,27 @@
             <td><a target="_blank"href="./css_task7.html">LINK</a></td>
         </tr>
         <tr>
-            <td>Task13</td>
+            <td>BS_Task1</td>
             <td></td>
         </tr>
         <tr>
-            <td>Task14</td>
+            <td>BS_Task2</td>
             <td></td>
         </tr>
         <tr>
-            <td>Task15</td>
+            <td>BS_Task<3/td>
             <td></td>
         </tr>
         <tr>
-            <td>Task16</td>
+            <td>BS_Task4</td>
             <td></td>
         </tr>
         <tr>
-            <td>Task17</td>
+            <td>BS_Task5</td>
             <td></td>
         </tr>
         <tr>
-            <td>Task18</td>
+            <td>BS_Task6</td>
             <td></td>
         </tr>
         
