--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>BS_Task<3/td>
+            <td>BS_Task3</td>
             <td></td>
         </tr>
         <tr>
