--- a/html_task1.html
+++ b/html_task1.html
@@ -10,12 +10,16 @@
             border:1px solid white;
             background-color: rgb(138,207,206);
             width: 700px;
+            border-collapse: collapse;
         }
-       
+       th,tr,td
+       {
+            border :2px solid white;
+       }
         
     </style>
 </head>
-    <table  cellspacing="5">
+    <table>
         <tr>
             <th>&emsp;&emsp;&emsp;FirstName&emsp;&emsp;&emsp;</th>
             <th>&emsp;&emsp;&emsp;LastName&emsp;&emsp;&emsp;</th>
