--- a/html_task5.html
+++ b/html_task5.html
@@ -16,7 +16,10 @@
             border:1px solid black;
             border-collapse: collapse;
         }
-
+        td
+        {
+            padding-right:2px;
+        }
         #c2
         {
             width:400px;
