--- a/css_task7.html
+++ b/css_task7.html
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td><label  for="no">Phone Number:</label></td>
-                    <td><input name="no" style="width: 150px;" type="text"></td>
+                    <td><input name="no" style="width: 150px;" type="tel"></td>
                 </tr>
                 <tr>
                     <td><label  for="sex">Gender:</label></td>
